# eamfit

./: README.md  build.sh  build_tests.sh
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
build_test/lib/: Makefile  cmake_install.cmake
build_test/lib/configs/: Makefile  cmake_install.cmake
build_test/lib/core/: Makefile  cmake_install.cmake
docs/tests/: .~lock.vec_results.ods#  vec_results.ods
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/configs/: Atom.cpp  Atom.h  Atom_Labels.cpp  Atom_Labels.h  CMakeLists.txt  Config.cpp  Config.h  Make_Crystal.cpp  Make_Crystal.h  Neighbour_List.cpp  Neighbour_List.h
src/lib/core/: CMakeLists.txt  Stringf.cpp  Stringf.h  Vec.cpp  Vec.h
src/lib/tester/: Assert.cpp  Assert.h  CMakeLists.txt  Unit_Test.cpp  Unit_Test.h
src/main/: CMakeLists.txt  main.cpp
src_test/: CMakeLists.txt
src_test/lib/: CMakeLists.txt
src_test/lib/configs/: CMakeLists.txt  configs.Atom.units.cpp  configs.Config.units.cpp  configs.Make_Crystal.dev.cpp  configs.Make_Crystal.units.cpp  configs.Neighbour_List.units.cpp  configs.dev.cpp
src_test/lib/core/: CMakeLists.txt  core.Stringf.units.cpp  core.Vec.units.cpp  core.dev.cpp
tests/: run.sh  tests.py
vs/: eamfit++.code-workspace
